<resources>
    <string name="app_name">Art Sense</string>
    <string name="app_version">App Version: </string>
    <string name="start_scan">Start Scan</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="details_desc">LENGTH = Length of EIR packet (Type + Data) in bytes.\nTYPE = The type of data
        (<a href="https://btprodspecificationrefs.blob.core.windows.net/assigned-numbers/Assigned%20Number%20Types/Generic%20Access%20Profile.pdf">More Info</a>).
    </string>
    <string name="raw_data">Raw Data (Hex)</string>
    <string name="advertising_data">Advertising Data:</string>
    <string name="scan_response">Scan Response:</string>
    <string name="details">Details:</string>
    <string name="len">LEN.</string>
    <string name="type">TYPE</string>
    <string name="value">VALUE</string>
    <string name="ok">OK</string>
    <string name="rssi_filter">RSSI Filter</string>
    <string name="read">Read</string>
    <string name="send_message">Enter the new Name</string>
    <string name="write">Write</string>
    <string name="notify">Notify</string>
    <string name="bluetooth_icon">Bluetooth Icon</string>
    <string name="data">Data</string>
    <string name="connect">Edit</string>
    <string name="search">Search</string>
    <string name="scan">Scan</string>
    <string name="no_response">No Response</string>
    <string name="device_info">Device Info</string>
    <string name="device_information">Device Information</string>
    <string name="hardware">Hardware</string>
    <string name="device_name">Device Name:</string>
    <string name="model">Model:</string>
    <string name="bluetooth_low_energy">Bluetooth Low Energy</string>
    <string name="high_speed_2m_phy_supported">High Speed (2M PHY) Supported:</string>
    <string name="no">NO</string>
    <string name="long_range_coded_phy_supported">Long Range (Coded PHY) Supported:</string>
    <string name="extended_advertising_supported">Extended Advertising Supported:</string>
    <string name="periodic_advertising_supported">Periodic Advertising Supported:</string>
    <string name="estimated_distance">0 m</string>
    <string name="cancel">cancel</string>
    <string name="android_desc">Android (2008 - Present) A constantly evolving work, Android embodies the intersection of technology and human experience. Through its open-source platform and customizable interface, it represents a fluid, decentralized approach to digital interaction, inviting viewers to consider the ongoing impact of software on our daily lives.</string>
    <string name="mona_lisa_desc">"    Leonardo da Vinci, Mona Lisa (circa 1503-1519) Oil on poplar panel. A testament to Leonardo’s mastery, the Mona Lisa exemplifies the artist’s groundbreaking approach to portraiture. From the delicate modeling of the face to the hazy background created through sfumato, the work showcases his innovative techniques and profound understanding of human perception."</string>
    <string name="starry_night_desc">"    Vincent van Gogh, The Starry Night (1889) Oil on canvas. A luminous vision of the night, The Starry Night reveals Van Gogh's deeply personal and often turbulent relationship with the world. The swirling stars and cypress trees pulse with an energy that transcends the literal, inviting viewers to reflect on the vastness of the universe and the complexities of the human spirit."</string>
    <string name="scream_desc">Edvard Munch\'s \"The Scream,\" created in 1893 using tempera on cardboard, is one of the most recognizable images in art history. This iconic work depicts a figure on a bridge against a turbulent, swirling sky. The figure\'s hands are clasped to their face, and their mouth is open in a silent scream. The distorted features and intense colors convey a powerful sense of anxiety, alienation, and existential dread, making \"The Scream\" a potent symbol of human anguish and the modern condition.\n</string>
    <string name="guernica_desc">Pablo Picasso\'s \"Guernica,\" painted in 1937, is a monumental black, white, and gray oil on canvas that powerfully depicts the horrors of war. Inspired by the bombing of the Basque town of Guernica during the Spanish Civil War, the painting is a chaotic and emotionally charged scene filled with fragmented figures: a bull, a horse, screaming women, a dead child, and dismembered limbs. These symbolic figures represent the suffering of innocent civilians and the brutality of conflict. \"Guernica\" is not a literal depiction of the bombing but rather a powerful anti-war statement and a lasting symbol of the devastating consequences of violence.\n</string>
    <string name="david_desc">Michelangelo\'s \"David,\" sculpted between 1501 and 1504, is a masterpiece of Renaissance sculpture. This colossal marble statue depicts the biblical hero David before his battle with Goliath. Unlike earlier depictions that showed David after his victory, Michelangelo portrays him in a moment of intense concentration and anticipation, his gaze fixed in the distance, muscles tense, and sling draped over his shoulder. The statue\'s powerful physique, anatomical accuracy, and psychological intensity embody the ideals of humanism and the Renaissance focus on human potential and achievement. \"David\" stands as a symbol of youthful strength, courage, and civic pride.\n</string>
    <string name="skull_desc">Andy Warhol\'s \"Skulls,\" a series created in 1976, revisits the traditional artistic theme of \"memento mori\" (a reminder of mortality) through his signature Pop Art lens. Utilizing his silkscreen printing technique, Warhol presents stark images of human skulls, often in vibrant, contrasting colors. By repeating and varying the image, sometimes with stark shadows or bold outlines, Warhol both emphasizes the skull\'s stark presence and, in a way, desensitizes the viewer to its symbolic weight. This series can be interpreted in various ways: as a reflection on mortality, a commentary on the commercialization of even the most serious subjects, or perhaps even a personal reflection by Warhol on his own brush with death following his shooting in 1968.\n</string>
    <string name="genesis_desc">Michelangelo\'s \"The Creation of Adam,\" painted circa 1512 as part of the Sistine Chapel ceiling, is a powerful depiction of God giving life to Adam, the first man. The fresco shows a muscular, reclining Adam reaching out his hand towards God, who is borne by angels and enveloped in a flowing cloak. The nearly touching fingers of God and Adam create a dramatic focal point, symbolizing the divine spark of life being transmitted to humanity. This iconic image has become a symbol of creation, humanity, and the relationship between God and humankind, embodying the Renaissance ideals of human potential and divine inspiration.</string>
</resources>