<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:paddingEnd="8dp"
        android:background="?android:attr/selectableItemBackground"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:id="@+id/bluetoothIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/bluetooth_icon"
            android:src="@drawable/ic_paint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/purple_200" />

        <TextView
            android:id="@+id/deviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/bluetoothIcon"
            tools:text="Device Name" />

        <TextView
            android:id="@+id/macAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/deviceName"
            app:layout_constraintStart_toEndOf="@id/bluetoothIcon"
            tools:text="XX:XX:XX:XX:XX" />

        <TextView
            android:id="@+id/signal_strength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="65dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/macAddress"
            app:layout_constraintStart_toEndOf="@+id/bluetoothIcon"
            tools:text="-100 dBm" />

        <!--<Button
            android:id="@+id/advertisingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data"
            app:layout_constraintRight_toLeftOf="@+id/connectButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="10dp" />-->

        <Button
            android:id="@+id/connectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/esti_dist"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:minWidth="32dp"
            android:text="@string/estimated_distance"
            app:layout_constraintEnd_toStartOf="@+id/connectButton"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>